--- a/home/templates/home/tags/site_header.html
+++ b/home/templates/home/tags/site_header.html
@@ -5,7 +5,7 @@
 <div class="header-text text-center">
     <div class="container">
         <p class="hidden-xs">SPECIALIZING IN PRIVATE CUSTOM STUDENT TOURS FOR OVER TWO DECADES | CALL FOR A CUSTOM QUOTE (800) 896-3858</p>
-        <p class="hidden-sm hidden-md hidden-lg">FREE CUSTOM QUOTE (800) 896-3858</p>
+        <p class="hidden-sm hidden-md hidden-lg">FREE CUSTOM QUOTE <a href="tel:+01-800-896-3858">(800) 896-3858</a></p>
     </div>
 </div>
 <div class="top-banner">
