--- a/fourwinds/static/css/style.css
+++ b/fourwinds/static/css/style.css
@@ -233,6 +233,12 @@ have a fixed width and height (but it's not required).
   display: none;
 }
 
+/* line 98, ../sass/_header.scss */
+a[href^="tel:"] {
+  text-decoration: none;
+  border: 0px !important;
+}
+
 /* line 3, ../sass/_footer.scss */
 #footer #menu-footer .footer-nav {
   background-color: #071116;
@@ -528,94 +534,100 @@ have a fixed width and height (but it's not required).
   padding-bottom: 5%;
 }
 
-/* line 181, ../sass/_landing.scss */
-.jcarousel-control-prev img, .jcarousel-control-next img {
+/* line 180, ../sass/_landing.scss */
+.widgets-controller {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+/* line 185, ../sass/_landing.scss */
+.widgets-controller .jcarousel-control-prev img, .widgets-controller .jcarousel-control-next img {
   background-color: #ddd;
   padding: 10px 15px;
   border-radius: 20px;
 }
 
 @media (max-width: 560px) {
-  /* line 191, ../sass/_landing.scss */
+  /* line 196, ../sass/_landing.scss */
   #main-carousel .left .icon, #main-carousel .right .icon {
     width: 30px;
     height: 30px;
     border-radius: 20px;
   }
-  /* line 199, ../sass/_landing.scss */
+  /* line 204, ../sass/_landing.scss */
   #main-carousel .carousel-inner .item .carousel-item {
     height: 200px;
   }
-  /* line 205, ../sass/_landing.scss */
+  /* line 210, ../sass/_landing.scss */
   #main-carousel .carousel-caption img {
     height: 100px;
   }
-  /* line 208, ../sass/_landing.scss */
+  /* line 213, ../sass/_landing.scss */
   #main-carousel .carousel-caption .cta {
     padding-top: 20px;
     margin-bottom: 0px;
   }
-  /* line 211, ../sass/_landing.scss */
+  /* line 216, ../sass/_landing.scss */
   #main-carousel .carousel-caption .cta .cta-button {
     font-size: 12px;
     padding: 12px 16px;
   }
 
-  /* line 219, ../sass/_landing.scss */
+  /* line 224, ../sass/_landing.scss */
   .jcarousel-control-prev img, .jcarousel-control-next img {
     padding: 5px 8px;
   }
 }
 @media (max-width: 768px) and (min-width: 560px) {
-  /* line 228, ../sass/_landing.scss */
+  /* line 233, ../sass/_landing.scss */
   #main-carousel .left .icon, #main-carousel .right .icon {
     width: 30px;
     height: 30px;
     border-radius: 20px;
   }
-  /* line 236, ../sass/_landing.scss */
+  /* line 241, ../sass/_landing.scss */
   #main-carousel .carousel-inner .item .carousel-item {
     height: 250px;
   }
-  /* line 242, ../sass/_landing.scss */
+  /* line 247, ../sass/_landing.scss */
   #main-carousel .carousel-caption img {
     height: 150px;
   }
-  /* line 245, ../sass/_landing.scss */
+  /* line 250, ../sass/_landing.scss */
   #main-carousel .carousel-caption .cta {
     padding-top: 20px;
     margin-bottom: -30px;
   }
-  /* line 248, ../sass/_landing.scss */
+  /* line 253, ../sass/_landing.scss */
   #main-carousel .carousel-caption .cta .cta-button {
     font-size: 14px;
     padding: 12px 15px;
   }
 }
 @media (max-width: 1150px) and (min-width: 769px) {
-  /* line 260, ../sass/_landing.scss */
+  /* line 265, ../sass/_landing.scss */
   #main-carousel .left .icon, #main-carousel .right .icon {
     width: 30px;
     height: 30px;
     border-radius: 20px;
   }
-  /* line 267, ../sass/_landing.scss */
+  /* line 272, ../sass/_landing.scss */
   #main-carousel .carousel-caption img {
     height: 200px;
   }
-  /* line 270, ../sass/_landing.scss */
+  /* line 275, ../sass/_landing.scss */
   #main-carousel .carousel-caption .cta {
     padding-top: 20px;
     margin-bottom: -30px;
   }
-  /* line 273, ../sass/_landing.scss */
+  /* line 278, ../sass/_landing.scss */
   #main-carousel .carousel-caption .cta .cta-button {
     font-size: 14px;
     padding: 12px 15px;
   }
 }
 @media (min-width: 1150px) {
-  /* line 284, ../sass/_landing.scss */
+  /* line 289, ../sass/_landing.scss */
   .carousel-caption .cta {
     margin-bottom: 30px;
   }
