--- a/home/templates/home/tags/main_slider.html
+++ b/home/templates/home/tags/main_slider.html
@@ -20,11 +20,11 @@
       </div>
 
       <!-- Controls -->
-      <a class="left carousel-control" href="#main-carousel" role="button" data-slide="prev">
+      <a class="left carousel-control hidden-xs" href="#main-carousel" role="button" data-slide="prev">
         <span class="icon" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
       </a>
-      <a class="right carousel-control" href="#main-carousel" role="button" data-slide="next">
+      <a class="right carousel-control hidden-xs" href="#main-carousel" role="button" data-slide="next">
         <span class="icon" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
       </a>
