Add additional fields to get quote form

--- a/website/templates/website/website_get_quote_page.html
+++ b/website/templates/website/website_get_quote_page.html
@@ -65,6 +65,7 @@
                                 <label>Type of Trip:</label>
                                 <select id="id_type-of-trip" name="type-of-trip">
                                     <option value="" selected="selected">Please select</option>
+                                    <option value="Music Trip">Music Trip</option>
                                     <option value="Domestic Trip">Domestic Trip</option>
                                     <option value="International Trip">International Trip</option>
                                     <option value="Field Trip">Field Trip</option>
@@ -94,6 +95,12 @@
                             <div class="form-group">
                                 <label>Number of Students:</label>
                                 <input id="id_number-of-students" name="number-of-students" step="any" type="number">
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label>Number of Days:</label>
+                                <input id="id_number-of-days" name="number-of-days" step="any" type="number">
                             </div>
                         </div>
                         <div class="col-md-6">
