Remove fields of get quote page in wagtail admin

--- a/website/templates/website/website_get_quote_page.html
+++ b/website/templates/website/website_get_quote_page.html
@@ -11,7 +11,8 @@
                             <div class="form-group">
                                 <label>First Name:</label>
                                 <span>*required</span>
-                                <input id="id_first-name" maxlength="255" name="first-name" type="text" required="" value="{% if firstname %}{{ firstname }}{% endif %}">
+                                <input id="id_first-name" maxlength="255" name="first-name" type="text" required=""
+                                value="{% if firstname %}{{ firstname }}{% endif %}">
                             </div>
                         </div>
                         <div class="col-md-6">
