--- a/website/templates/website/website_full_content_page.html
+++ b/website/templates/website/website_full_content_page.html
@@ -7,6 +7,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="homepage-body-content margin-t-20">
+                    <h3>{{ page.heading }}</h3>
                     {{ page.intro|richtext }}<br>
                 </div>
             </div>
