--- a/website/templates/email/get-a-quote-template.html
+++ b/website/templates/email/get-a-quote-template.html
@@ -43,6 +43,9 @@
             Number of students: {{ number_of_students }}
         </p>
         <p style="font-family: 'Roboto', sans-serif; font-size: 16px;  line-height: 1.5;  text-align: justify;  color: #7d7d7d;">
+            Number of days: {{ number_of_days }}
+        </p>
+        <p style="font-family: 'Roboto', sans-serif; font-size: 16px;  line-height: 1.5;  text-align: justify;  color: #7d7d7d;">
             Approximate budget: {{ approximate_budget }}
         </p>
         <h3 style="margin-top: 37px; font-family: 'Roboto', sans-serif; font-size: 20px;  font-weight: 600;  line-height: 1.2;  text-align: left;  color: #102633;">Comments</h3>
