--- a/home/templates/home/tags/main_slider.html
+++ b/home/templates/home/tags/main_slider.html
@@ -6,7 +6,8 @@
       <div class="carousel-inner" role="listbox">
           {% for item in gallery_images.all %}
             <div class="item {% if forloop.counter0 == 0 %} active {% endif %}">
-                {% image item.image fill-2000x650 class="carousel-item" %}
+              {% image item.image fill-1562x445-c100 as carousel_image %}
+              <div class="carousel-image" style="background-image: url('{{ carousel_image.url }}')">
                 {% if forloop.counter0 == 0 %}
                 <div class="carousel-caption">
                     <img src="{% static 'img/slideshow/travel-is-education.png' %}" alt="">
@@ -15,6 +16,7 @@
                     </div>
                 </div>
                 {% endif %}
+              </div>
             </div>
         {% endfor %}
       </div>
