Fix required field indicator

--- a/website/templates/website/website_contact_us_page.html
+++ b/website/templates/website/website_contact_us_page.html
@@ -34,6 +34,7 @@
                                 <div class="col-md-12">
                                     <div class="form-group">
                                         <label>{{ field.label }}:</label>
+                                        <span>*</span>
                                         {{ field }}
                                         <span>{{ field.help_text }}</span>
                                     </div>
