--- a/website/templates/website/website_get_quote_page.html
+++ b/website/templates/website/website_get_quote_page.html
@@ -10,7 +10,7 @@
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label>First Name:</label>
-                                <span>*required</span>
+                                <span>*</span>
                                 <input id="id_first-name" maxlength="255" name="first-name" type="text" required=""
                                 value="{% if firstname %}{{ firstname }}{% endif %}">
                             </div>
@@ -18,21 +18,21 @@
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label>Last Name:</label>
-                                <span>*required</span>
+                                <span>*</span>
                                 <input id="id_last-name" maxlength="255" name="last-name" type="text" required="" value="{% if lastname %}{{ lastname }}{% endif %}">
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label>Email Address:</label>
-                                <span>*required</span>
+                                <span>*</span>
                                 <input id="id_email-address" name="email-address" type="email" required="" value="{% if email %}{{ email }}{% endif %}">
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label>Phone Number:</label>
-                                <span>*required</span>
+                                <span>*</span>
                                 <input id="id_phone-number" maxlength="255" name="phone-number" type="text" required="" value="{% if phonenumber %}{{ phonenumber }}{% endif %}">
                             </div>
                         </div>
@@ -51,7 +51,7 @@
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label>Role:</label>
-                                <span>*required</span>
+                                <span>*</span>
                                 <select id="id_role" name="role" required="">
                                     <option value="" {% if not role %}selected{% endif %}>Please select</option>
                                     <option value="Teacher" {% if role == 'Teacher' %}selected{% endif %}>Teacher</option>
