Update social icons in footer

--- a/fourwinds/static/sass/_footer.scss
+++ b/fourwinds/static/sass/_footer.scss
@@ -49,8 +49,9 @@
             margin-top: 20px;
             li {
                 a {
-                    .social-icon {
-                        font-size: 28px;
+                    img {
+                        width: 30px;
+                        height: 30px;
                     }
                 }
             }
