--- a/home/templates/home/tags/footer_menu.html
+++ b/home/templates/home/tags/footer_menu.html
@@ -53,17 +53,17 @@
 <ul class="nav navbar-nav social">
     <li>
         <a href="https://www.facebook.com/FourwindsTours/" target="_blank">
-            <span class="ion-social-facebook social-icon"></span>
+            <img src="{% static 'img/footer/facebook.png' %}">
         </a>
     </li>
     <li>
         <a href="https://twitter.com/fourwindstours" target="_blank">
-            <span class="ion-social-twitter social-icon"></span>
+            <img src="{% static 'img/footer/twitter.png' %}">
         </a>
     </li>
     <li>
         <a href="https://www.linkedin.com/company-beta/6569482/" target="_blank">
-            <span class="ion-social-linkedin social-icon"></span>
+            <img src="{% static 'img/footer/linkedin.png' %}">
         </a>
     </li>
 </ul>
