--- a/fourwinds/static/css/style.css
+++ b/fourwinds/static/css/style.css
@@ -284,10 +284,11 @@ a[href^="tel:"] {
   margin-top: 20px;
 }
 /* line 52, ../sass/_footer.scss */
-#footer #menu-footer .social li a .social-icon {
-  font-size: 28px;
+#footer #menu-footer .social li a img {
+  width: 30px;
+  height: 30px;
 }
-/* line 60, ../sass/_footer.scss */
+/* line 61, ../sass/_footer.scss */
 #footer #menu-footer .policies li a {
   font-size: 12px;
   color: #999999;
