Move quick contact form below content on mobile

--- a/website/templates/website/tags/side_testimonials.html
+++ b/website/templates/website/tags/side_testimonials.html
@@ -1,5 +1,5 @@
 {% load static wagtailcore_tags wagtailimages_tags home_tags %}
-<div class="col-md-3">
+<div class="col-xs-12 col-sm-12 col-md-3">
     <div class="testimonials">
         <h4 class="title">Client Testimonials</h4>
         {%  for testimonial in testimonials %}
