--- a/home/templates/home/tags/quick_contact_form.html
+++ b/home/templates/home/tags/quick_contact_form.html
@@ -1,4 +1,4 @@
-<div class="col-md-3">
+<div class="col-xs-12 col-sm-12 col-md-3">
    <div class="cta">
        <div class="cta-form">
            <div class="form-title">
