--- a/fourwinds/static/css/style.css
+++ b/fourwinds/static/css/style.css
@@ -156,7 +156,7 @@ have a fixed width and height (but it's not required).
 .main-nav .navbar-nav li a {
   font-size: 15px;
   color: #fff;
-  font-weight: bold;
+  font-family: "gothambold" !important;
 }
 /* line 53, ../sass/_header.scss */
 .main-nav .navbar-nav li a:hover {
@@ -192,53 +192,39 @@ have a fixed width and height (but it's not required).
   border: 0px;
 }
 
-/* Show all menu links when navigation is toggled in mobile */
-@media only screen and (max-width: 768px) {
-  /* line 5, ../sass/_mixins.scss */
-  .footer-nav .navbar-nav, .main-nav .navbar-nav {
-    float: left;
-    text-align: left;
-    width: 100%;
-  }
-  /* line 11, ../sass/_mixins.scss */
-  .footer-nav .navbar-nav li a:hover, .main-nav .navbar-nav li a:hover {
-    color: #00b19f !important;
-    background-color: transparent !important;
-  }
-  /* line 17, ../sass/_mixins.scss */
-  .footer-nav .navbar-nav .dropdown-menu, .main-nav .navbar-nav .dropdown-menu {
-    display: block;
-    position: static;
-    background-color: transparent;
-    border: 0 none;
-    box-shadow: none;
-    margin-top: 0;
-    position: relative;
-    width: 100%;
-    padding-left: 15px;
-  }
-  /* line 28, ../sass/_mixins.scss */
-  .footer-nav .navbar-nav .dropdown-menu li a, .main-nav .navbar-nav .dropdown-menu li a {
-    color: #fff !important;
-    padding: 5px 15px 5px 25px;
-    line-height: 20px;
-  }
-  /* line 32, ../sass/_mixins.scss */
-  .footer-nav .navbar-nav .dropdown-menu li a:hover, .main-nav .navbar-nav .dropdown-menu li a:hover {
-    color: #00b19f !important;
-  }
-}
-/* line 94, ../sass/_header.scss */
-.sub-arrow {
-  display: none;
-}
-
-/* line 98, ../sass/_header.scss */
+/* line 92, ../sass/_header.scss */
 a[href^="tel:"] {
   text-decoration: none;
   border: 0px !important;
 }
 
+@media (min-width: 320px) and (max-width: 767px) {
+  /* line 99, ../sass/_header.scss */
+  .main-nav .navbar-nav {
+    float: left;
+    text-align: left;
+    width: 100%;
+  }
+  /* line 104, ../sass/_header.scss */
+  .main-nav .navbar-nav li a {
+    color: #fff;
+  }
+  /* line 106, ../sass/_header.scss */
+  .main-nav .navbar-nav li a .sub-arrow {
+    background-color: #204358;
+    color: #fff;
+  }
+  /* line 111, ../sass/_header.scss */
+  .main-nav .navbar-nav li .dropdown-menu {
+    display: none;
+  }
+  /* line 114, ../sass/_header.scss */
+  .main-nav .navbar-nav li .dropdown-menu li a {
+    padding-bottom: 5px;
+    font-size: 14px;
+    color: #fff;
+  }
+}
 /* line 3, ../sass/_footer.scss */
 #footer #menu-footer .footer-nav {
   background-color: #071116;
@@ -253,82 +239,91 @@ a[href^="tel:"] {
 #footer #menu-footer .footer-nav .container .navbar-header .navbar-toggle .icon-bar {
   background-color: #fff;
 }
-/* line 17, ../sass/_footer.scss */
-#footer #menu-footer .footer-nav .container #footer-nav .navbar-nav {
-  float: none;
-  margin: 0 auto;
-  display: table;
-  table-layout: fixed;
-}
-/* line 22, ../sass/_footer.scss */
-#footer #menu-footer .footer-nav .container #footer-nav .navbar-nav a {
+/* line 19, ../sass/_footer.scss */
+#footer #menu-footer .footer-nav .navbar-nav li a {
   color: #fff;
-  font-size: 15px;
-  font-weight: bold;
-  font-family: "Helvetica Neue", "Helvetica", "Arial" , sans-serif;
-  padding-bottom: 15px;
+  font-size: 15px !important;
+  font-family: "gothambold" !important;
 }
-/* line 28, ../sass/_footer.scss */
-#footer #menu-footer .footer-nav .container #footer-nav .navbar-nav a:hover, #footer #menu-footer .footer-nav .container #footer-nav .navbar-nav a.highlighted {
-  color: #00b19f;
+/* line 23, ../sass/_footer.scss */
+#footer #menu-footer .footer-nav .navbar-nav li a:hover, #footer #menu-footer .footer-nav .navbar-nav li a.highlighted {
+  color: #00b19f !important;
   background-color: #fff;
 }
-/* line 36, ../sass/_footer.scss */
-#footer #menu-footer .footer-nav .container #footer-nav .navbar-nav li .dropdown-menu li a {
+/* line 27, ../sass/_footer.scss */
+#footer #menu-footer .footer-nav .navbar-nav li a .sub-arrow {
+  background-color: #204358;
+  color: #fff;
+}
+/* line 32, ../sass/_footer.scss */
+#footer #menu-footer .footer-nav .navbar-nav li .dropdown-menu {
+  display: none;
+}
+/* line 35, ../sass/_footer.scss */
+#footer #menu-footer .footer-nav .navbar-nav li .dropdown-menu li a {
+  color: #000;
   padding-bottom: 5px;
   font-size: 14px;
-  color: #000;
 }
-/* line 48, ../sass/_footer.scss */
+/* line 45, ../sass/_footer.scss */
 #footer #menu-footer .social {
   margin-top: 20px;
 }
-/* line 52, ../sass/_footer.scss */
+/* line 49, ../sass/_footer.scss */
 #footer #menu-footer .social li a img {
   width: 30px;
   height: 30px;
 }
-/* line 61, ../sass/_footer.scss */
+/* line 58, ../sass/_footer.scss */
 #footer #menu-footer .policies li a {
   font-size: 12px;
   color: #999999;
   padding: 2px 5px;
 }
 
-/* Show all menu links when navigation is toggled in mobile */
-@media only screen and (max-width: 768px) {
-  /* line 5, ../sass/_mixins.scss */
-  .footer-nav .navbar-nav, .main-nav .navbar-nav {
+@media (min-width: 320px) and (max-width: 767px) {
+  /* line 71, ../sass/_footer.scss */
+  #footer #menu-footer .footer-nav {
+    background-color: #071116;
+  }
+  /* line 75, ../sass/_footer.scss */
+  #footer #menu-footer .footer-nav .container .navbar-header .navbar-toggle {
+    float: none;
+    border: 1px solid #ddd;
+    text-align: center;
+  }
+  /* line 78, ../sass/_footer.scss */
+  #footer #menu-footer .footer-nav .container .navbar-header .navbar-toggle .icon-bar {
+    background-color: #fff;
+  }
+  /* line 85, ../sass/_footer.scss */
+  #footer #menu-footer .footer-nav .navbar-nav {
     float: left;
     text-align: left;
     width: 100%;
   }
-  /* line 11, ../sass/_mixins.scss */
-  .footer-nav .navbar-nav li a:hover, .main-nav .navbar-nav li a:hover {
+  /* line 90, ../sass/_footer.scss */
+  #footer #menu-footer .footer-nav .navbar-nav li a {
+    color: #fff;
+    font-size: 15px !important;
+    font-family: "gothambold" !important;
+    padding-bottom: 15px;
+  }
+  /* line 95, ../sass/_footer.scss */
+  #footer #menu-footer .footer-nav .navbar-nav li a:hover, #footer #menu-footer .footer-nav .navbar-nav li a.highlighted {
     color: #00b19f !important;
-    background-color: transparent !important;
+    background-color: #fff;
   }
-  /* line 17, ../sass/_mixins.scss */
-  .footer-nav .navbar-nav .dropdown-menu, .main-nav .navbar-nav .dropdown-menu {
-    display: block;
-    position: static;
-    background-color: transparent;
-    border: 0 none;
-    box-shadow: none;
-    margin-top: 0;
-    position: relative;
-    width: 100%;
-    padding-left: 15px;
+  /* line 99, ../sass/_footer.scss */
+  #footer #menu-footer .footer-nav .navbar-nav li a .sub-arrow {
+    background-color: #204358;
+    color: #fff;
   }
-  /* line 28, ../sass/_mixins.scss */
-  .footer-nav .navbar-nav .dropdown-menu li a, .main-nav .navbar-nav .dropdown-menu li a {
-    color: #fff !important;
-    padding: 5px 15px 5px 25px;
-    line-height: 20px;
-  }
-  /* line 32, ../sass/_mixins.scss */
-  .footer-nav .navbar-nav .dropdown-menu li a:hover, .main-nav .navbar-nav .dropdown-menu li a:hover {
-    color: #00b19f !important;
+  /* line 106, ../sass/_footer.scss */
+  #footer #menu-footer .footer-nav .navbar-nav li .dropdown-menu li a {
+    color: #fff;
+    padding-bottom: 5px;
+    font-size: 14px;
   }
 }
 /* line 1, ../sass/_landing.scss */
