--- a/fourwinds/static/sass/_footer.scss
+++ b/fourwinds/static/sass/_footer.scss
@@ -13,32 +13,29 @@
                         text-align: center;
                     }
                 }
-                #footer-nav {
-                    .navbar-nav {
-                        float: none;
-                        margin: 0 auto;
-                        display: table;
-                        table-layout: fixed;
-                        a {
-                            color: $white;
-                            font-size : 15px;
-                            font-weight: bold;
-                            font-family: "Helvetica Neue", "Helvetica", "Arial" , sans-serif;
-                            padding-bottom: 15px;
-                            &:hover, &.highlighted {
-                                color: #00b19f;
-                                background-color: $white;
-                            }
+            }
+            .navbar-nav {
+                li {
+                    a {
+                        color: $white;
+                        font-size : 15px !important;
+                        font-family: $gothambold !important;
+                        &:hover, &.highlighted {
+                            color: #00b19f !important;
+                            background-color: $white;
                         }
+                        .sub-arrow {
+                            background-color: #204358;
+                            color: $white;
+                        }
+                    }
+                    .dropdown-menu {
+                        display: none;
                         li {
-                            .dropdown-menu {
-                                li {
-                                    a {
-                                        padding-bottom: 5px;
-                                        font-size: 14px;
-                                        color: #000;
-                                    }
-                                }
+                            a {
+                                color: #000;
+                                padding-bottom: 5px;
+                                font-size: 14px;
                             }
                         }
                     }
@@ -68,4 +65,94 @@
     }
 }
 
-@include mobile_show_links();
+@include mobile {
+    #footer {
+        #menu-footer {
+            .footer-nav {
+                background-color: #071116;
+                .container {
+                    .navbar-header {
+                        .navbar-toggle {
+                            float: none;
+                            border: 1px solid #ddd;;
+                            .icon-bar {
+                                background-color: $white;
+                            }
+                            text-align: center;
+                        }
+                    }
+                }
+                .navbar-nav {
+                    float: left;
+                    text-align: left;
+                    width: 100%;
+                    li {
+                        a {
+                            color: $white;
+                            font-size : 15px !important;
+                            font-family: $gothambold !important;
+                            padding-bottom: 15px;
+                            &:hover, &.highlighted {
+                                color: #00b19f !important;
+                                background-color: $white;
+                            }
+                            .sub-arrow {
+                                background-color: #204358;
+                                color: $white;
+                            }
+                        }
+                        .dropdown-menu {
+                            li {
+                                a {
+                                    color: $white;
+                                    padding-bottom: 5px;
+                                    font-size: 14px;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+// @include tablet {
+//     .footer-nav {
+//         background-color: #071116;
+//         text-align: center;
+//         .container {
+//             .navbar-header {
+//                 .navbar-toggle {
+//                     float: none;
+//                     border: 1px solid #ddd;;
+//                     .icon-bar {
+//                         background-color: $white;
+//                     }
+//                     text-align: center;
+//                 }
+//             }
+//         }
+//         .navbar-nav {
+//             width: 100%;
+//             li {
+//                 a {
+//                     color: $white;
+//                     font-size : 15px !important;
+//                     font-family: $gothambold !important;
+//                     &:hover, &.highlighted {
+//                         color: #00b19f !important;
+//                     }
+//                 }
+//                 .dropdown-menu {
+//                     li {
+//                         a {
+//                             font-size: 15px;
+//                             color: #000;
+//                         }
+//                     }
+//                 }
+//             }
+//         }
+//     }
+// }
