--- a/fourwinds/static/sass/_header.scss
+++ b/fourwinds/static/sass/_header.scss
@@ -49,7 +49,7 @@
             a {
                 font-size: 15px;
                 color: $white;
-                font-weight: bold;
+                font-family: $gothambold !important;
                 &:hover {
                     color: #00b19f;
                     background-color: white;
@@ -89,13 +89,36 @@
     border: 0px;
 }
 
-@include mobile_show_links();
-
-.sub-arrow {
-    display: none;
-}
-
 a[href^="tel:"] {
   text-decoration: none;
   border: 0px !important;
+}
+
+@include mobile {
+    .main-nav {
+        .navbar-nav {
+            float: left;
+            text-align: left;
+            width: 100%;
+            li {
+                a {
+                    color: $white;
+                    .sub-arrow {
+                        background-color: #204358;
+                        color: $white;
+                    }
+                }
+                .dropdown-menu {
+                    display: none;
+                    li {
+                        a {
+                            padding-bottom: 5px;
+                            font-size: 14px;
+                            color: $white;
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
