Add uploading itinerary

--- a/website/templates/email/get-a-quote-template.html
+++ b/website/templates/email/get-a-quote-template.html
@@ -48,6 +48,9 @@
         <p style="font-family: 'Roboto', sans-serif; font-size: 16px;  line-height: 1.5;  text-align: justify;  color: #7d7d7d;">
             Approximate budget: {{ approximate_budget }}
         </p>
+        <p style="font-family: 'Roboto', sans-serif; font-size: 16px;  line-height: 1.5;  text-align: justify;  color: #7d7d7d;">
+            Attached itinerary: {{ itinerary }}
+        </p>
         <h3 style="margin-top: 37px; font-family: 'Roboto', sans-serif; font-size: 20px;  font-weight: 600;  line-height: 1.2;  text-align: left;  color: #102633;">Comments</h3>
         <p style="font-family: 'Roboto', sans-serif; font-size: 16px;  line-height: 1.5;  text-align: justify;  color: #7d7d7d;">
             {{ comments }}
