--- a/home/templates/home/tags/top_menu.html
+++ b/home/templates/home/tags/top_menu.html
@@ -30,6 +30,9 @@
                         {% endif %}
                     </li>
                 {% endfor %}
+                <li>
+                    <a href="https://fourwinds.secure.force.com/TripRegistration/">Registration</a>
+                </li>
             </ul>
         </div>
     </div>
